# Pipex

./: .gitignore  CMakeLists.txt  main.c
Executing/: Executing.h  executing.c
Libft/: Libft.h  ft_split.c  ft_split_join.c  ft_strdup.c  ft_strjoin.c  ft_strlcpy.c  ft_strlen.c  ft_strnstr.c  ft_substr.c
Utils/: Utils.h  errors_handling.c
